GNOME Bugzilla – Bug 667095
Message "Assertion Failed" in the assistant
Last modified: 2012-01-17 19:50:35 UTC
In the assistant process, when the PIN code is displayed, if you click "cancel", in the console there is a warning Gtk-CRITICAL **: gtk_main_quit: assertion `main_loops != NULL' failed
commit 98ef67c77f2dd54a5b93dc5a2e1188f15875d1f8 Author: Bastien Nocera <hadess@hadess.net> Date: Tue Jan 17 18:34:27 2012 +0000 wizard: Fix assertion on exit No need to call gtk_main_quit(), we'll exit automatically when the last window is closed. https://bugzilla.gnome.org/show_bug.cgi?id=667095