wizard: Fix assertion on exit

No need to call gtk_main_quit(), we'll exit automatically
when the last window is closed.

https://bugzilla.gnome.org/show_bug.cgi?id=667095